- Tasks: Added pagination to the category select combobox
- Accept YYYYMMDD format when importing vCard with birthdays
- If fs/Folder fails to copy (because destination might be inside source folder) the already created folder record will be deleted
- Added clarification for CalDAV tasklist sync to the settings->synchronization panel

28-10-2014 5.0.89
- Sorting users respects sort of name order
- Billing: Fixed display problem of costcode combos: Changed displaying "code" instead of "name" in the combo
- Fixed problem with attachments in the \tmp\attachments\ folder that didn't get removed after sending an email from a mime source
- Address Book & Custom Fields: fixed advanced searching Tree Select custom fields in Address Book module.

22-10-2014 5.0.88
- Files: Can now globally copy-paste/cut-paste files and folders using the File Browser window and the Files module.
- Billing: Fixed menu item New > Invoice/Quote.

20-10-2014 5.0.87
- Billing: Fixed problem with Ioncube and the billing cost codes request.
- Fix for Excel HEAD request "Microsoft Office Existence Discovery": respond with 501 Not Implemented.

17-10-2014 5.0.86
- Billing: Added global cost codes and their attached tracking codes
- Billing: Added due date for orders. Also added 2 template variables that can be used in the templates: {due_date} {due_days}
- Remove quotes from SINCE and BEFORE queries to IMAP server as in RFC1730
- Calendar: Name the exception event if calendar import is from Outlook.

10-10-2014 5.0.85
- Tracking code in billing items
- Calendar & Email: Fixed bug for creating emails from calendar events.
- Z-Push 2.1: Fixed timezone bug in iPhone task sync.
- Tickets: Fixed report: count also tickets in status Open.
- Calendar: Fixed calendar name positioning in month view Print.

08-10-2014 5.0.84
- save attachment bug
- Calendar month print will now show events between before 08:00 and after 17:59
- Fixed summer- / wintertime issue in the calendar's month print